--- a/styles.css
+++ b/styles.css
@@ -246,7 +246,7 @@ nav ul li a:hover {
 }
 
 .timeline-item:hover h3 {
-    color: #0056b3; /* Color change on hover to match gradient */
+    color: #ffffff; /* Color change on hover to match gradient */
 }
 
 
