--- a/styles.css
+++ b/styles.css
@@ -120,6 +120,15 @@ nav ul li a:hover {
     padding: 50px 0;
 }
 
+.carousel {
+    position: relative;
+    width: 100%;
+    overflow: hidden; /* Hide overflow */
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
 .projects-grid {
     display: flex;
     flex-wrap: wrap;
